--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -1,14 +1,13 @@
 .sidebar
   .sidebar__header
     .sidebar__header__box
-      %p.sidebar__header__box-user-name
-        user-name
+      %h3.sidebar__header__box-user-name
+        = current_user.name
       .sidebar__header__box__btn-edit
         %i.fa.fa-edit
-        -# = fa_icon 'edit'
       .sidebar__header__box__btn-cog
-        %i.fa.fa-cog
-        -# = fa_icon 'cog'
+        = link_to edit_user_path(current_user) do
+          = fa_icon 'cog'
   .sidebar__groups
     .sidebar__groups__group
       group-name
