--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -29,7 +29,21 @@
     background-color: #2f3e51;
     height: 100%;
     width: auto;
-    padding: 20px 20px 0;
     color: #ffffff;
+    height: calc(100vh - 100px);
+    padding: 20px 20px 0;
+    .group {
+      box-sizing: border-box;
+      margin-bottom: 40px;
+      &__name {
+        color: #fff;
+        font-size: 15px;
+      }
+      &__message {
+        color: #fff;
+        font-size: 11px;
+        margin-top: 5px;
+      }
+    }
   }
 }
