--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -32,70 +32,70 @@
       padding: 0 20px;
     }
   }
-  &__body {
-    background-color: #fafafa;
-    height: calc(100vh - 190px);
-    padding: 0 40px;
-    text-align: left;
-    &__message {
-      padding-top: 46px;
-      &-user-name {
-        display: block;
-        position: relative;
-        float: left;
-        font-size: 16px;
-        font-weight: bold;
-        color: #434A54;
+  .messages {
+    background-color: #FAFAFA;
+    box-sizing: border-box;
+    padding: 46px 40px 0;
+    height: calc(100% - 100px - 90px);
+    .message {
+      .upper-message {
+        display: flex;
+        &__user-name {
+          color: #434A54;
+          font-size: 16px;
+          font-weight: bold;
+        }
+        &__date {
+          color: #999999;
+          font-size: 12px;
+          padding-left: 10px;
+        }
       }
-      &-date {
-        display: block;
-        position: relative;
-        float: left;
-        font-size: 12px;
-        color: #999999;
-        padding-left: 10px;
-      }
-      &-text {
-        clear: both;
-        font-size: 14px;
-        color: #434A54;
-        padding-top: 10px;
+      .lower-message {
+        margin-top: 10px;
+        &__content {
+          color: #434A54;
+          font-size: 14px;
+          margin-bottom: 40px;
+        }
       }
     }
   }
-  &__footer {
-    width: calc(100% - 300px);
+  .form {
+    background-color: #DDDDDD;
+    box-sizing: border-box;
     position: absolute;
     bottom: 0px;
-    background-color: #ddd;
-    padding: 20px 40px;
-    &__form {
-      display: flex;
-      &-box {
-        height: 50px;
-        width: 100%;
-        position: relative;
-        &__text{
-          height: 50px;
-          width: 100%;
-          padding:0 40px 0 10px;
-          color: #434a54;
-        }
-        &__image{
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          font-size: 1.3rem;
-        }
+    height: 90px;
+    padding: 20px 50px 20px 40px;
+    &__message {
+      border: none;
+      float: left;
+      height: 50px;
+      width: calc(100% - 150px);
+    }
+    &__mask {
+      background-color: #ffffff;
+      float: left;
+      height: 50px;
+      padding-right: 10px;
+      &__image {
+        font-size: 20px;
+        line-height: 50px;
       }
-      &-btn {
-        height: 50px;
-        width: 100px;
-        padding:0 30px;
-        margin-left: 15px;
-        background-color: #38aef0;
-        color: #ffffff;
+      .hidden {
+        display: none;
       }
+    }
+    &__submit {
+      background-color: #38aef0;
+      border: none;
+      color: #ffffff;
+      float: right;
+      font-size: 16px;
+      height: 50px;
+      margin-left: 15px;
+      padding: 0 30px;
     }
   }
 }
