--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -35,8 +35,9 @@
   .messages {
     background-color: #FAFAFA;
     box-sizing: border-box;
-    padding: 46px 40px 0;
+    padding: 46px 40px 90px;
     height: calc(100% - 100px - 90px);
+    overflow:auto;
     .message {
       .upper-message {
         display: flex;
@@ -64,9 +65,10 @@
   .form {
     background-color: #DDDDDD;
     box-sizing: border-box;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     height: 90px;
+    width: calc(100% - 300px);
     padding: 20px 50px 20px 40px;
     &__message {
       border: none;
