Add file of users.js

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,7 +3,7 @@
 
   .main
     .main__header
-      %h2.main__header__group-name group-name
+      %h2.main__header__group-name #{@group.name}
       %li.main__header__group-members Members:
       =link_to "#", class: "main__header__group-edit-btn" do
         Edit
