--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -39,6 +39,7 @@
     background-color: #FAFAFA;
     box-sizing: border-box;
     padding: 46px 40px 90px;
+    margin-top: 100px;
     height: calc(100% - 100px - 90px);
     overflow:auto;
     .message {
