--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -41,6 +41,8 @@
     padding: 46px 40px 90px;
     margin-top: 100px;
     height: calc(100% - 100px - 90px);
+    width: calc(100vw - 300px);
+    position: absolute;
     overflow:auto;
     .message {
       .upper-message {
